app/javascript/flavours/polyam/styles/mastodon/components.scss
/* ... */
.column-header__wrapper {
  position: relative;
  flex: 0 0 auto;
  z-index: 1;

  &.active {
    box-shadow: 0 1px 0 var(--color-bg-brand-softest);

    &::before {
      display: block;
      content: '';
      position: absolute;
      bottom: -13px;
      inset-inline-start: 0;
      inset-inline-end: 0;
      margin: 0 auto;
      width: 60%;
      pointer-events: none;
      height: 28px;
      z-index: 1;
      background: radial-gradient(
        ellipse,
        rgb(from var(--color-bg-brand-base) r g b / 23%) 0%,
        transparent 60%
      );
    }
  }

  .announcements {
    z-index: 1;
    position: relative;
  }
}

.column-header__select-row {
  border-width: 0 1px 1px;
  border-style: solid;
  border-color: var(--color-border-primary);
  padding: 15px;
  display: flex;
  align-items: center;
  gap: 8px;

  &__checkbox .check-box {
    display: flex;
  }

  &__select-menu:disabled {
    visibility: hidden;
  }

  &__mode-button {
    margin-left: auto;
    color: var(--color-text-brand);
    font-weight: bold;
    font-size: 14px;

    &:hover {
      color: var(--color-text-brand-soft);
    }
  }
}

.column-header {
  display: flex;
  font-size: 16px;
  border: 1px solid var(--color-border-primary);
  border-radius: 4px 4px 0 0;
  flex: 0 0 auto;
  position: relative;
  z-index: 2;
  outline: 0;

  &__title-wrapper {
    display: flex;
    flex-grow: 1;
  }

  &__title {
    display: flex;
    align-items: center;
    gap: 5px;
    flex-grow: 1;
    margin: 0;
    border: 0;
    padding: 13px;
    padding-inline-end: 0;
    color: inherit;
    background: transparent;
    font: inherit;
    text-align: start;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;

    &--with-back-button {
      padding-inline-start: 0;
    }

    &:focus-visible {
      outline: var(--outline-focus-default);
    }

    .logo {
      height: 24px;
    }
  }

  .column-header__back-button {
    flex: 1;
    color: var(--color-text-brand);

    &.compact {
      flex: 0 0 auto;
      color: var(--color-text-primary);
    }
  }

  &.active {
    .column-header__icon {
      color: var(--color-text-brand);
      text-shadow: 0 0 10px var(--color-bg-brand-softest);
    }
  }

  &:focus,
  &:active {
    outline: 0;
  }

  &__advanced-buttons {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 16px;
    padding-top: 0;

    &:first-child {
      padding-top: 16px;
    }
  }
}

.column-header__buttons {
  height: 48px;
  display: flex;
}

.column-header__links {
  margin-bottom: 14px;
}

.column-header__links .text-btn {
  margin-inline-end: 10px;
}

.column-header__button {
  display: flex;
  justify-content: center;
  align-items: center;
  border: 0;
  color: var(--color-text-primary);
  background: transparent;
  cursor: pointer;
  font-size: 16px;
  padding: 0 15px;

  &:last-child {
    border-start-end-radius: 4px;
  }

  &:hover {
    color: var(--color-text-secondary);
  }

  &:focus-visible {
    outline: var(--outline-focus-default);
  }

  &.active {
    color: var(--color-text-brand);

    &:hover {
      color: var(--color-text-brand);
    }
  }

  &:disabled {
    color: var(--color-text-disabled);
    cursor: default;
  }
}

.no-reduce-motion .column-header__button .icon-sliders {
  transition: transform 150ms ease-in-out;
}

.column-header__collapsible {
  max-height: 70vh;
  overflow: hidden;
  overflow-y: auto;
  color: var(--color-text-secondary);
  transition:
    max-height 150ms ease-in-out,
    opacity 300ms linear;
  opacity: 1;
  z-index: 1;
  position: relative;
  border-left: 1px solid var(--color-border-primary);
  border-right: 1px solid var(--color-border-primary);
  border-bottom: 1px solid var(--color-border-primary);

  @media screen and (max-width: $no-gap-breakpoint) {
    border-left: 0;
    border-right: 0;
  }

  &.collapsed {
    max-height: 0;
    opacity: 0.5;
    border-bottom: 0;
  }

  &.animating {
    overflow-y: hidden;
  }

  hr {
    height: 0;
    background: transparent;
    border: 0;
    border-top: 1px solid var(--color-border-primary);
    margin: 10px 0;
  }
}

.column-header__collapsible-inner {
  border-top: 0;
}

.column-header__setting-btn {
  &:hover,
  &:focus {
    color: var(--color-text-secondary);
    text-decoration: underline;
  }

  // Polyam: Fix icon size of arrows in column settings
  .icon {
    width: 13px;
    height: 13px;
  }
}

.column-header__collapsible__extra + .column-header__setting-btn {
  padding-top: 5px;
}

.column-header__permission-btn {
  display: inline;
  font-weight: inherit;
  text-decoration: underline;
}

.column-header__setting-arrows {
  display: flex;
  align-items: center;
}

.column-settings__pillbar {
  display: flex;
  background-color: transparent;
  margin-bottom: 10px;
  align-items: stretch;
  gap: 2px;

  .pillbar-button:first-child {
    border-start-start-radius: 4px;
    border-end-start-radius: 4px;
  }

  .pillbar-button:last-child {
    border-start-end-radius: 4px;
    border-end-end-radius: 4px;
  }
}

.pillbar-button {
  border: 0;
  color: var(--color-text-primary);
  padding: 2px;
  margin: 0;
  font-size: inherit;
  flex: auto;
  background-color: var(--color-bg-primary);
  transition: all 0.2s ease;
  transition-property: background-color, box-shadow;

  &[disabled] {
    cursor: not-allowed;
    opacity: 0.5;
  }

  &:not([disabled]) {
    &:hover,
    &:active {
      background: var(--color-bg-secondary);
    }

    &.active {
      background-color: var(--color-bg-brand-base);
      color: var(--color-text-on-brand-base);
    }

    &:focus-visible {
      outline: var(--outline-focus-default);
    }
  }
}
/* ... */

